@@ -6,11 +6,12 @@ muzzle {
   pass {
     group.set("org.apache.camel")
     module.set("camel-core")
-    versions.set("[2.20.1,3)")
+    versions.set("[2.19,3)")
+    assertInverse.set(true)
   }
 }
 
-val camelversion = "2.20.1"
+val camelversion = "2.20.1" // first version that the tests pass on
 val versions: Map<String, String> by project
 
 dependencies {
@@ -67,5 +68,9 @@ tasks {
 
     // TODO: fix camel instrumentation so that it uses semantic attributes extractors
     jvmArgs("-Dotel.instrumentation.experimental.span-suppression-strategy=span-kind")
+
+    // required on jdk17
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
   }
 }
