@@ -3,26 +3,30 @@ plugins {
   id("otel.publish-conventions")
 }
 
+// Name the Spring Boot modules in accordance with https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.developing-auto-configuration.custom-starter
+base.archivesName.set("opentelemetry-spring-boot")
 group = "io.opentelemetry.instrumentation"
 
 val versions: Map<String, String> by project
 val springBootVersion = versions["org.springframework.boot"]
 
 dependencies {
-  implementation(project(":instrumentation-annotations-support"))
-
   implementation("org.springframework.boot:spring-boot-autoconfigure:$springBootVersion")
   annotationProcessor("org.springframework.boot:spring-boot-autoconfigure-processor:$springBootVersion")
   implementation("javax.validation:validation-api:2.0.1.Final")
 
+  implementation(project(":instrumentation-annotations-support"))
+  implementation(project(":instrumentation:kafka:kafka-clients:kafka-clients-2.6:library"))
+  implementation(project(":instrumentation:spring:spring-kafka-2.7:library"))
   implementation(project(":instrumentation:spring:spring-web-3.1:library"))
-  implementation(project(":instrumentation:spring:spring-webmvc-3.1:library"))
+  implementation(project(":instrumentation:spring:spring-webmvc-5.3:library"))
   implementation(project(":instrumentation:spring:spring-webflux-5.0:library"))
   implementation("io.opentelemetry:opentelemetry-micrometer1-shim") {
     // just get the instrumentation, without micrometer itself
     exclude("io.micrometer", "micrometer-core")
   }
 
+  compileOnly("org.springframework.kafka:spring-kafka:2.9.0")
   compileOnly("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
   compileOnly("org.springframework.boot:spring-boot-starter-aop:$springBootVersion")
   compileOnly("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
@@ -37,7 +41,9 @@ dependencies {
   compileOnly("io.opentelemetry:opentelemetry-exporter-jaeger")
   compileOnly("io.opentelemetry:opentelemetry-exporter-otlp")
   compileOnly("io.opentelemetry:opentelemetry-exporter-zipkin")
+  compileOnly(project(":instrumentation-annotations"))
 
+  testImplementation("org.springframework.kafka:spring-kafka:2.9.0")
   testImplementation("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
   testImplementation("org.springframework.boot:spring-boot-starter-aop:$springBootVersion")
   testImplementation("org.springframework.boot:spring-boot-starter-webflux:$springBootVersion")
@@ -45,6 +51,7 @@ dependencies {
   testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
     exclude("org.junit.vintage", "junit-vintage-engine")
   }
+  testImplementation("org.testcontainers:kafka")
 
   testImplementation(project(":testing-common"))
   testImplementation("io.opentelemetry:opentelemetry-sdk")
@@ -58,9 +65,22 @@ dependencies {
   testImplementation("io.opentelemetry:opentelemetry-exporter-jaeger")
   testImplementation("io.opentelemetry:opentelemetry-exporter-otlp")
   testImplementation("io.opentelemetry:opentelemetry-exporter-zipkin")
-  testImplementation(project(":instrumentation-annotations-support"))
+  testImplementation(project(":instrumentation-annotations"))
 }
 
 tasks.compileTestJava {
   options.compilerArgs.add("-parameters")
+}
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+
+  // disable tests on openj9 18 because they often crash JIT compiler
+  val testJavaVersion = gradle.startParameter.projectProperties["testJavaVersion"]?.let(JavaVersion::toVersion)
+  val testOnOpenJ9 = gradle.startParameter.projectProperties["testJavaVM"]?.run { this == "openj9" } ?: false
+  if (testOnOpenJ9 && testJavaVersion?.majorVersion == "18") {
+    enabled = false
+  }
 }
